Added Contact Page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edusys",
-  "homepage": "https://soumwadeep.github.io/EduSys",
+  "homepage": "https://soumwadeep.github.io/EduSys/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
