--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "firebase": "^9.17.2",
     "firebase-tools": "^11.24.1",
     "openai": "^3.2.1",
-    "quill": "^1.3.7",
+    "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2"
