--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "axios": "^1.3.4",
     "firebase": "^9.17.2",
     "firebase-tools": "^11.24.1",
+    "jspdf": "^2.5.1",
     "openai": "^3.2.1",
+    "pdf-lib": "^1.17.1",
     "quill": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
