--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,8 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+env: 
+    REACT_APP_API_KEY: ${{secrets.REACT_APP_OPEN_AI_KEY}}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
